styles.css
html, body {
  overflow: hidden;
}

body {
  position: relative;

  background: rgb(128, 88, 88);
  color: white;
  margin: 0;
  transition: .5s;

  display: flex;
  align-items: center;
  justify-content: center;

  height: 100vh;
  font-size: 2em;
  font-family: monospace;

  cursor: pointer;
  user-select: none;
}

main {
  flex-direction: column;
  height: 100vh;
}

#noteLabel {
  margin: 0.5rem;
  font-size: 8em;
  font-weight: 700;
  user-select: none;
  text-shadow: rgba(0,0,0,0.7) 10px 8px 0;
}

#presetNameLabel, #solution-label:not(.hidden) {
  text-shadow: #000 0 0 10px, #000 2px 2px 0;
}


.flex-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

#direction-icon-label {
  font-size: 4.5rem;
}

#solution-label {
  min-width: 100px;
  min-height: 60px;
  margin-left: 30px;
}
#solution-label.hidden {
  background: white;
}
#solution-label.hidden::after {
  content: "?";
  position: relative;
  width: 100%;
  color: #000;
  text-align: center;
  background: white;
}



#menu {
  position: absolute;
  right: 0;
  transition: all 0.5s;
  right: -250px;
}

#menu.open {
  right: 0;
}


#menu_icon {
  padding: 10px;
  cursor: pointer;
  background: #00000060;
  width: 30px;
  height: 26px;
  margin-top: 60px;
  border-radius: 10px 0 0 10px;
  pointer-events: all;
}

#menu_icon rect {
  fill: currentColor;
}

#menu_body {
  background: red;
  float: right;
  height: 100vh;
  width: 250px;
  background: #00000060;
}

#menu_body > div {
  margin: 15px;
}

#menu_body li {
  cursor: pointer;
  margin-top: 18px;
  font-size: 1.4rem;
}

#menu_overlay {
  background: transparent;
  width: 100%;
  height: 100%;
  position: absolute;
  transition: 0.5s;
}

#menu_overlay:not(.open) {
  pointer-events: none;
}

#menu_overlay.open {
  background: #00000060;
  cursor: default;
}

